# dyffusion

./: pyproject.toml
scripts/: download_physical_systems_data.sh
src/configs/: main_config.yaml
src/configs/datamodule/: _base_data_config.yaml
src/configs/experiment/: navier_stokes.yaml  spring_mesh.yaml
src/configs/logger/: wandb.yaml
src/dyffusion/: __init__.py
