[project]
name = "dyffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.8.0",
    "hydra-core>=1.3.2",
    "lightning>=2.2.5",
    "netcdf4>=1.7.2",
    "numpy<2",
    "pandas>=2.2.3",
    "tensordict>=0.2.1",
    "torch==1.13.1",
    "torchmetrics==0.11.4",
    "wandb>=0.19.0",
    "xarray>=2024.7.0",
    "xskillscore>=0.0.26",
]

[project.scripts]
dyffusion = "dyffusion:main"

[tool.uv]
index-strategy = "unsafe-best-match"
link-mode = "symlink"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu116" },
]

[[tool.uv.index]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
